Downgraded to Java 11 in order to support more projects